--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-    "name" : "management",
-    "version" : "1.0.0",
+    "name": "management",
+    "version": "1.0.0",
     "scripts": {
-        "client" : "cd client && yarn start",
-        "server" : "nodemon server.js",
-        "dev" : "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+        "client": "cd client && yarn start",
+        "server": "nodemon server.js",
+        "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
-        "body-parser" : "^1.18.3",
-        "express" : "^4.16.4"
+        "body-parser": "^1.18.3",
+        "express": "^4.16.4",
+        "mysql": "^2.17.1",
+        "yarn": "^1.19.2"
     },
     "devDependencies": {
-        "concurrently" : "^4.0.1"
+        "concurrently": "^4.0.1"
     }
 }
