--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
+        "@aws-sdk/client-secrets-manager": "^3.799.0",
         "@material-ui/icons": "^4.5.1",
+        "aws-sdk": "^2.1692.0",
         "body-parser": "^1.18.3",
         "express": "^4.16.4",
         "multer": "^1.4.2",
